fixed ignored final

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,8 @@ data/
 old_data/
 submissions/
 writeup/
-!cuda/
-!cuda/**
-!mlx/
-!mlx/**
+/cuda/
+/mlx/
 # src
 src/__pycache__/
 src/.ipynb_checkpoints/
