--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ src/.ipynb_checkpoints/
 notebooks/.ipynb_checkpoints/
 
 .vscode/
-.DS_Store
+/.DS_Store
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
